--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
-name: sigprop-rec
+name: IPS-LAE
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - Python=3.11.5
   - numpy=1.24.3
@@ -8,3 +9,4 @@ dependencies:
   - scipy=1.11.1
   - bottleneck=1.3.5
   - scikit-learn=1.3.0
+  - scikit-sparse =0.4.16
